--- a/public/css/estilo-gaby.css
+++ b/public/css/estilo-gaby.css
@@ -89,6 +89,8 @@
     margin: 10px;
     border-radius: 15px 0 0 15px;
 }
+
+/*  */
 #card1 {
     background-image: url("../img/flor1.png");
     border-radius: 0 15px 15px 0;
