--- a/public/icon/css/quest.css
+++ b/public/icon/css/quest.css
@@ -98,11 +98,11 @@ html,body,div,span,object,iframe,h2,h3,h5,h6,p,blockquote,pre,abbr,address,cite,
     button:hover .button-text {
      color: var(--azul-salao);
     }
-.margin{
-    margin: 50px 0;
-}
+/* .margin{
+    /* margin: 50px 0; 
+} */
 .separadora{
-    padding: 40px 0;
+    padding: 40px 0 0;
     display: flex;
     width: 100%;
     /* height: 500px; */
