Agendamento Funcionando + Ajustes Estilização

--- a/public/css/estilo-gaby.css
+++ b/public/css/estilo-gaby.css
@@ -51,6 +51,7 @@
 .about-text {
     flex-direction: column;
     width: 50%;
+    color: rgba(72, 201, 175, 0.411);
 }
 .about-text h1 {
     color: var(--white-color);
