--- a/public/css/loupe.css
+++ b/public/css/loupe.css
@@ -40,19 +40,20 @@
 /* Estilo para o conteúdo pai */
 .content {
     position: relative;
+    /* margin: 20px; */
 }
 
 /* Estilo para o conteúdo ampliado */
 .zoomed-content {
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.8);
-    border: 1px solid #ccc;
-    padding: 15px;
+    /* background-color: rgba(190, 134, 134, 0.8); */
+    border: 1px solid #ffffff;
+    /* padding: 2px; */
     z-index: 999;
     pointer-events: none;
     width: auto;
-    max-width: 400px;
-    max-height: 400px;
+    max-width: 200px;
+    max-height: 200px;
     word-wrap: break-word;
     display: none;
     color: white;
